fixing ipad layout issues

--- a/cmd/control/web/src/app/components/camera-feed/camera-feed.component.scss
+++ b/cmd/control/web/src/app/components/camera-feed/camera-feed.component.scss
@@ -341,7 +341,7 @@ $d-pad-arrow-move: 35%;
   }
 }
 
-//vertical ipad/ipad pro
+//vertical ipad/vertical ipad pro
 @media only screen and (width: 1024px), (width: 768px) and (height: 1366px), (height: 1024px) {
   .body-container {
     display: flex;
@@ -438,7 +438,7 @@ $d-pad-arrow-move: 35%;
       background-color: #ddd;
       text-align: center;
   
-      font-size: 2.5vw;
+      font-size: 2vw;
     }
   }
 
@@ -498,7 +498,7 @@ $d-pad-arrow-move: 35%;
   }
 }
 
-// ipad/horizontal ipad pro
+// horizontal ipad/horizontal ipad pro
 @media only screen and (min-width: 1024px) and (max-height: 1024px)  {
   .camera-container {
       position: absolute;
@@ -513,7 +513,7 @@ $d-pad-arrow-move: 35%;
     height: 40%;
     width: 40%;
     position: relative;
-    display: inline;
+    display: flex;
   }
 
   .zoom {
@@ -579,12 +579,12 @@ $d-pad-arrow-move: 35%;
   
   .preset {
     button {
-      height: 80%;
+      height: 70%;
       width: 80%;
       white-space: normal;
-      line-height: unset;
+      line-height: 1.5;
       background-color: #ddd;
-      font-size: 1em;
+      font-size: .8em;
     }
   }
 
